# ffdump

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: fuckingfast.rs  main.rs  privatebin.rs
