[package]
name = "ffdump"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls", "json", "gzip", "deflate"], default-features = false }

# Crypto — PrivateBin decryption
bs58 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
flate2 = "1"

# Regex + JSON
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async combinators + errors
futures = "0.3"
anyhow = "1"

# Cross-platform known-folder paths
dirs = "5"
